--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7ee9ce8490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5f2eee3790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ee99ba310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7ee99ba510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f2f1b6290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5f2f1b6490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7ee9f69bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7ee9f69dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5f2f768bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5f2f768dd0&gt;]</pre>
 </div>
 
 </div>
