--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa889defb50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f49dd10d550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa88a0efa50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa889db1310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f49dd0b5110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f49dd0b5310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa88a396590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa88a347b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f49dd676a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f49dd676c90&gt;]</pre>
 </div>
 
 </div>
