--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe9e2d26b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8c1e80e450&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe9e3000290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe9e3000490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c1e502250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8c1e502450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe9e35b1b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe9e35b1d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c1ea9db50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8c1ea9dd50&gt;]</pre>
 </div>
 
 </div>
