--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5067ce8ad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3db7e04750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5067cb5090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5067cb52d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3db81f0f50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3db8203190&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f506824ba50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f506824bc90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3db87c4950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3db87c4b50&gt;]</pre>
 </div>
 
 </div>
