--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f768a25aa50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efc899d3e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f768a1e0250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f768a1fe510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc8968d150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc8968d350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f768a7a2b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f768a7ace50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efc89c9d2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efc89c4ebd0&gt;]</pre>
 </div>
 
 </div>
