--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4708cc3350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f23e475d790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4708fc60d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4708fc62d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f23e4d27090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f23e4d272d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f470955b990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f470955bb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f23e52c5a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f23e5310850&gt;]</pre>
 </div>
 
 </div>
