--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1a1e64a1d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f89dad11050&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a1e691790&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a1e316250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89db001290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89db0014d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1a1e691810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1a1e8d7b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f89db59db90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f89db59ddd0&gt;]</pre>
 </div>
 
 </div>
