--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f973bf45d90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbed207f350&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f973c2460d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f973c2462d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbed2047090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbed2047290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f973c7dc9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f973c7dcbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbed25e3950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbed25e3b50&gt;]</pre>
 </div>
 
 </div>
