--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7eff395da390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe1cc6d3650&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7eff398d5110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7eff398d5310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1cc69f190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe1cc69f3d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7eff39e6a950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7eff39e6ab50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1ccc4fa50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe1ccc4fc90&gt;]</pre>
 </div>
 
 </div>
