--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd7b32b0990&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa54b408690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd7b2f9c1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd7b2f9c3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa54b3e3090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa54b3e3290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd7b3531b10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd7b3531d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa54b980990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa54b980b90&gt;]</pre>
 </div>
 
 </div>
