--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fca6b465f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcbfa3a79d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca6b153290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca6b153490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcbfa3ee150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcbfa3ee350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fca6b6f0b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fca6b6f0d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcbfa985a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcbfa985c90&gt;]</pre>
 </div>
 
 </div>
