--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f25fe246cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa5bd922b10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f25fe20a210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f25fe20a410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5bd601350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa5bd2c5390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f25fe7a5b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f25fe7a5d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5bd8aea10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa5bd863cd0&gt;]</pre>
 </div>
 
 </div>
