--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcb72cf9510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa5225c8b50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb72fdd1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb72fdd3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5225960d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa5225962d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcb73578b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcb73578d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa522b2ca10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa522b2cc10&gt;]</pre>
 </div>
 
 </div>
