--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f29ee97d950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9134d69690&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f29ee659190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f29ee659390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9134d450d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9134d452d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f29eec559d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f29eec08d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f91352dc950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f91352dcb50&gt;]</pre>
 </div>
 
 </div>
