--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f00376ce650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbd145d27d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0037ac1fd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0037ad0210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd142ab3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbd142ab5d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0038091950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0038091b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fbd1484dd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fbd1484df50&gt;]</pre>
 </div>
 
 </div>
