--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f82de521850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fadc5f83750&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f82de4d4290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f82de4d4490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fadc50ab290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fadc50ab4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f82dea85b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f82dea85d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fadc564eb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fadc564ed90&gt;]</pre>
 </div>
 
 </div>
