--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fac0eb13bd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd96760e510&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fac0e7dd0d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fac0e7dd2d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd967901190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd967901390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fac0ed91a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fac0ed91c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd967e9cad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd967e9ccd0&gt;]</pre>
 </div>
 
 </div>
