--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f91f5f0a750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa500372bd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f91f5bbafd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f91f5bf4210&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa500055290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa500055490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f91f61898d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f91f6189ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa5005f3b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa5005f3d10&gt;]</pre>
 </div>
 
 </div>
