--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1d765e0390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2383c24e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d768b3290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1d768b3490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2383f12150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2383f12350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1d76e64b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1d76e64d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f23844c39d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f23844c3bd0&gt;]</pre>
 </div>
 
 </div>
