--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f68fceabe50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd2489f1c10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f68fbf8ccd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f68fbf8ced0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2483a0c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd2483a0e50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f68fc5385d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f68fc5387d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd24895c510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd24895c710&gt;]</pre>
 </div>
 
 </div>
