--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd2489f1c10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f375a873c90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd2483a0c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd2483a0e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f375a1f0c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f375a1f0e10&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd24895c510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd24895c710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f375a7ab5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f375a7ab790&gt;]</pre>
 </div>
 
 </div>
