--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd54e103290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f04e82e1510&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd54e512bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd54e512dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f04e7c6bb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f04e7c6bd50&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd54eac44d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd54eac46d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f04e825e350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f04e8218650&gt;]</pre>
 </div>
 
 </div>
